mob autoroll (standard values set on mob level entry)
checkload (list where a mob/obj is loaded)
Auto Toggles (loot, goold, split, sac, assist, map)
Hidden mob/obj
mob/obj stacking
hindex
helpcheck
OLC copy and delete options.
export (QQ's a zone into a tarball)t
Xlist (mlist, olist, rlist, zlist, slist, tlist, qlist)
(lots of major bugfixes too)
tbaMUD 3.59
[Feb 25 2009] - Jamdog
  Fixed new medit stats menu so that it uses the the Advanced/Standard cedit toggle
[Feb 24 2009] - Jamdog
  Bug-Fix: Fixed levels command, so it only shows immortal level if it's in the specified range
  Bug-Fix: write_mobile_espec now saves CON and CHA values for mobiles in world files
  Bug-Fix: stat zone <num> now shows the same as vstat zone <num> (instead of show zone (num)
  Bug-Fix: zone 'stat' info (print_zone, oasis_list.c) now shows the number of shops and triggers
  Bug-Fix: zone 'show' info (print_zone_to_buf, act.wizard.c) now shows number of quests.
  Added saving throws to write_mobile_espec (genmob.c) and interpret_espec (db.c)
  Added 'whois' command for all players
  medit: All numerical stats moved to new sub-menu, with 'autoroll' option
  medit: Advanced or Standard stats sub-menu with cedit toggle (in Game Operations)
[Feb 17 2009] - Jamdog
  Fixed a bug with %obj.extra% so that it now returns the list of extra flags
[Feb 11 2009] - Jamdog
  Fixed a crash bug in count_quests (quest.c) affecting zlist (thanks Fsantin)
[Feb 05 2009] - Jamdog
  Added "set <player> name <newname>", which renames a character, including pfile and index entry
[Feb 01 2009] - Jamdog
  Changed documentation /doc unixshelladminguide to PDF format.
[Jan 31 2009] - Jamdog
  Added room login trig types, to catch players logging in to a particular room
[Jan 29 2009] - Rumble
  Corrected zcheck MAX_OBJ_GOLD_ALLOWED to compare against Val 0, not Val 1. (thanks Tails)
  Created new MAX_OBJ_GOLD_ALLOWED define for zcheck. (thanks Tails)
  Fixed typo in players.c. (thanks Tristen)